<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".testimplementation.accelerometertest.AccelerometerTest">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="20dp">

        <TextView
            android:id="@+id/connect_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="40dp"
            android:text="@string/connect_device"
            android:textColor="@color/colorPrimary"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/connect_information_window1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/connect_instruction"
            android:textSize="20sp"
            android:layout_marginBottom="20dp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/connect_information_window2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/connect_information_1"
            android:textSize="15sp"
            android:layout_marginBottom="50dp" />


        <fragment xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/scanner_fragment"
            android:name="com.mbientlab.bletoolbox.scanner.BleScannerFragment"
            tools:layout="@layout/blescan_device_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>


</RelativeLayout>
